src/objects/SWOT__c.object
<CustomObject>
    <description>Success criteria related to account plan</description>
    <fields>
        <fullName>Acct_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>SWOTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_and_external__c</fullName>
        <label>Internal and external conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Strength (S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weakness (W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities (O)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic actions (SO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic actions (WO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threats(T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic actions (ST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic actions (WT)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Success Criteria - SWOT</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>SWOT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Criteria - SWOTs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>